Inital changes for "diplay posts" page Fix the "div" overlap issue

--- a/styles/common.css
+++ b/styles/common.css
@@ -2,11 +2,11 @@
 .btn-head {
     background-color: blue;
     color: white;
-    float:right;
     text-align: center;
     padding: 8px;
     margin-right: 4px;
     font-size: 12px;
+    float:right;
 }
 /* signup Button */
 .btn-sign {
@@ -111,14 +111,12 @@ input[type=text], input[type=password] {
 }
 /* Top-Right abd Top-Left Settings for Header */
 .top-right {
-    position: absolute;
     top:0;
     right:0;
     padding: 12px 20px;
     margin: 8px 0;
 }
 .top-left {
-    position: absolute;
     top:0;
     left:0;
     padding-left:8px;
